# hcls-ai-factory

./: .codecov.yml  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  FINAL_AUDIT_REPORT.md  FORK_READINESS_REPORT.md  HCLS_AI_FACTORY_ENVIRONMENT_GUIDE.md  HCLS_AI_FACTORY_EXECUTIVE_SUMMARY_NARRATIVE.txt  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  demo.sh  docker-compose.yml  health-monitor.sh  mkdocs.yml  netlify.toml  pyproject.toml  quickstart.sh  setup-data.sh  start-services.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
deploy/: README.md
docs/: ARCHITECTURE.mmd  ARCHITECTURE_MINDMAP.md  COMPLETE_PIPELINE_OVERVIEW.txt  DATA_SETUP.md  DEPLOYMENT_FLOW.md  FINAL_AUDIT_REPORT.md  GTC_2026_SUBMISSION.md  HCLS AI Factory Open-Source Project Bible v1.0.docx  HCLS AI Factory Open-Source Project Demo Guide v1.0.docx  HCLS AI Factory Open-Source Project Deployment Guide v1.0.docx  HCLS AI Factory Open-Source Project Foundational Learning Guide v1.0.docx  HCLS AI Factory Open-Source Project High-Level Points v1.0.docx  HCLS AI Factory Open-Source Project Intelligence Report v1.0.docx  HCLS AI Factory Open-Source Project Intermediate-Advanced Learning Guide v1.0.docx  HCLS AI Factory Open-Source Project White Paper v1.0.docx  HCLS_AI_FACTORY_ARXIV_PAPER.md  HCLS_AI_FACTORY_DEMO_GUIDE.md  HCLS_AI_FACTORY_DGX_SPARK_DEPLOYMENT_GUIDE.docx  HCLS_AI_FACTORY_DGX_SPARK_DEPLOYMENT_GUIDE.md  HCLS_AI_FACTORY_EXECUTIVE_BULLETS.md  HCLS_AI_FACTORY_INTELLIGENCE_REPORT.md  HCLS_AI_FACTORY_LEARNING_GUIDE_ADVANCED.md  HCLS_AI_FACTORY_LEARNING_GUIDE_ADVANCED_UNIFIED.md  HCLS_AI_FACTORY_LEARNING_GUIDE_FOUNDATIONS.md  HCLS_AI_FACTORY_LEARNING_GUIDE_FOUNDATIONS_UNIFIED.md  HCLS_AI_FACTORY_PROJECT_BIBLE.md  HCLS_AI_FACTORY_WHITE_PAPER_DGX_SPARK.md  HCLS_AI_Factory_Architecture_Open.mmd  HCLS_AI_Factory_Demo_Guide.docx  (+24 more)
(+346 files in other folders)
